crates/phynix-parse/tests/stmt/snapshots/tests__stmt__class_decl__class_members.snap
---
source: crates/phynix-parse/tests/stmt/class_decl.rs
expression: script
---
items:
  - Class:
      flags: 0
      name:
        Qualified:
          absolute: false
          parts:
            - {}
      extends: ~
      implements: []
      body:
        - Property:
            name: {}
            flags: 1
            set_visibility: ~
            type_annotation: ~
            default: ~
            hooks: ~
        - Property:
            name: {}
            flags: 2
            set_visibility: ~
            type_annotation: ~
            default: ~
            hooks: ~
        - Property:
            name: {}
            flags: 4
            set_visibility: ~
            type_annotation: ~
            default: ~
            hooks: ~
        - Property:
            name: {}
            flags: 1
            set_visibility: ~
            type_annotation: ~
            default: ~
            hooks: ~
        - Property:
            name: {}
            flags: 9
            set_visibility: ~
            type_annotation: ~
            default: ~
            hooks: ~
        - Const:
            name: {}
            flags: 1
            value:
              IntLiteral:
                value: 1
        - Method:
            name: {}
            flags: 1
            params: []
            return_type: ~
            body:
              items: []
      attributes: []
