crates/phynix-parse/tests/stmt/snapshots/tests__stmt__class_decl__class_modifiers.snap
---
source: crates/phynix-parse/tests/stmt/decl.rs
expression: script
---
items:
  - Class:
      flags: 3
      name:
        Qualified:
          absolute: false
          parts:
            - {}
      extends: ~
      implements: []
      body: []
      attributes: []
