crates/phynix-parse/tests/stmt/snapshots/tests__stmt__class_decl__class_property_asymmetric_visibility_implied_public.snap
---
source: crates/phynix-parse/tests/stmt/class_decl.rs
expression: script
---
items:
  - Class:
      flags: 0
      name:
        Qualified:
          absolute: false
          parts:
            - {}
      extends: ~
      implements: []
      body:
        - Property:
            name: {}
            flags: 1
            set_visibility: Private
            type_annotation: ~
            default:
              StringLiteral:
                style: SingleQuoted
            hooks: ~
      attributes: []
